修改群系装饰